--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html> //Informa ao navegador a versão do HTML
-<html lang="pt-BR"> //Lang é o idioma
+<!DOCTYPE html> <!--Informa ao navegador a versão do HTML-->
+<html lang="pt-BR"> <!--Lang é o idioma-->
 <head>
-    <meta charset="UTF-8"> //O Meta define qualquer informação de metadados (Dados de outros dados) que não podem ser definidos por outros elementos HTML Charset indica o formato de codificação definido por caracteres que foram utilizados em um documento
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> //Name define o nome do document-level metadata Content é 
+    <meta charset="UTF-8"> <!--O Meta define qualquer informação de metadados (Dados de outros dados) que não podem ser definidos por outros elementos HTML Charset indica o formato de codificação definido por caracteres que foram utilizados em um documento-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Name define o nome do document-level metadata Content é -->
     <title>Minininha</title>
-    <link rel="stylesheet" href="style.css"> //Rel define o relacionamento entre o arquivo em que o comando está escrito e o arquivo que é definido no caminho do href
+    <link rel="stylesheet" href="style.css"> <!--Rel define o relacionamento entre o arquivo em que o comando está escrito e o arquivo que é definido no caminho do href-->
     <link rel="shortcut icon" href="art/logo.png" />
 </head>
 <body>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.24.1/dist/phaser.min.js"></script> //Script é para um código em JavaScript e Src é URL é o endereço
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.24.1/dist/phaser.min.js"></script> <!--Script é para um código em JavaScript e Src é URL é o endereço-->
     <script src="game.js"></script>
 </body>
 </html>
